p2/confs/app-one-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-com
spec:
  type: ClusterIP
  selector:
    app: app1-com
  ports:
    - port: 80
      targetPort: 80
