p2/confs/app-three-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app3.com-service
spec:
  type: ClusterIP
  selector:
    app: app3.com
  ports:
    - port: 8080
      targetPort: 80
