p2/confs/app-two-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app2-com
spec:
  type: ClusterIP
  selector:
    app: app2-com
  ports:
    - port: 80
      targetPort: 80
