p2/confs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wildcard-host
spec:
  rules:
  
  - host: "app1.com"
    http:
      backend:
        service:
          name: app1.com-service
          port:
            number: 80

  - host: "app2.com"
    http:
      backend:
        service:
          name: app2.com-service
          port:
            number: 80

  - host: "app3.com"
    http:
      backend:
        service:
          name: app3.com-service
          port:
            number: 80
